--- a/grumphp.yml
+++ b/grumphp.yml
@@ -9,8 +9,6 @@ parameters:
         xmllint: ~
         phpcs:
             standard: vendor/spryker/code-sniffer/Spryker/ruleset.xml
-            ignore_patterns:
-            - tests/Generated/*
         phpcpd:
-            exclude: ['vendor', 'tests']
+            exclude: ['vendor', 'tests', 'src/Generated']
         codeception: ~
