- add own codeception module - allow to run unit tests without project - cleanup

--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,8 @@
     "php": ">=7.1",
     "spryker/company-user-extension": "^1.0",
     "spryker/customer": "^7.0",
-    "fond-of-spryker/product-list": "dev-master"
+    "fond-of-spryker/product-list": "dev-master",
+    "fond-of-spryker/product-list-company-extension": "dev-master"
   },
   "require-dev": {
     "spryker/code-sniffer": "^0.12",
@@ -24,7 +25,8 @@
     "mikey179/vfsstream": "^1.6",
     "phpro/grumphp": "^0.14",
     "sebastian/phpcpd": "^4.0",
-    "php-coveralls/php-coveralls": "^2.1"
+    "php-coveralls/php-coveralls": "^2.1",
+    "fond-of-codeception/spryker": "dev-master"
   },
   "minimum-stability": "dev",
   "prefer-stable": true,
@@ -36,7 +38,7 @@
   "autoload-dev": {
     "psr-4": {
       "FondOfSpryker\\": "tests/FondOfSpryker/",
-      "Generated\\": "tests/Generated/"
+      "Generated\\": "src/Generated/"
     }
   }
 }
