--- a/codeception.yml
+++ b/codeception.yml
@@ -1,3 +1,4 @@
+
 namespace: fond-of-spryker/product-list-company
 
 suites:
@@ -18,4 +19,8 @@ paths:
 coverage:
     enabled: true
     include:
-        - src/*.php
+        - src/FondOfSpryker/*.php
+
+modules:
+    enabled:
+        - \FondOfCodeception\Module\Spryker
