🦾 Use github actions - add phpunit 10 compatibility - add phpstan fixes - add phpcs fixes - ...

--- a/composer.json
+++ b/composer.json
@@ -12,21 +12,25 @@
       "email": "felix@pfister.de"
     }
   ],
+  "scripts": {
+    "ci": "make ci",
+    "codeception": "make codeception",
+    "phpcs": "make phpcs",
+    "phpstan": "make phpstan"
+  },
   "require": {
-    "php": ">=7.1",
+    "php": ">=7.3",
+    "spryker/company": "^1.0.0",
     "spryker/company-user-extension": "^1.0.0",
     "spryker/customer": "^7.0.0",
     "fond-of-spryker/product-list": "dev-spryker_upgrade",
+    "fond-of-spryker/product-list-company-extension": "dev-master",
     "fond-of-spryker/product-list-extension": "dev-master"
   },
   "require-dev": {
-    "spryker/code-sniffer": "^0.12",
-    "codeception/codeception": "^2.4",
-    "mikey179/vfsstream": "^1.6",
-    "phpro/grumphp": "^0.14",
-    "sebastian/phpcpd": "^4.0",
-    "php-coveralls/php-coveralls": "^2.1",
-    "fond-of-codeception/spryker": "^1.0"
+    "fond-of-codeception/spryker": "^1.0",
+    "spryker/code-sniffer": "*",
+    "spryker-sdk/phpstan-spryker": "*"
   },
   "minimum-stability": "dev",
   "prefer-stable": true,
@@ -38,7 +42,13 @@
   "autoload-dev": {
     "psr-4": {
       "FondOfSpryker\\": "tests/FondOfSpryker/",
-      "Generated\\": "src/Generated/"
+      "Generated\\": "src/Generated/",
+      "Orm\\Zed\\": "src/Orm/Zed/"
+    }
+  },
+  "config": {
+    "allow-plugins": {
+      "dealerdirect/phpcodesniffer-composer-installer": true
     }
   }
 }
