--- a/.editorconfig
+++ b/.editorconfig
@@ -10,10 +10,10 @@ end_of_line = lf
 insert_final_newline = true
 trim_trailing_whitespace = true
 
-[*.{yml,yaml}]
-indent_style = space
-indent_size = 4
-
 [*.json]
+indent_style = space
+indent_size = 2
+
+[*.yml]
 indent_style = space
 indent_size = 2
