--- a/composer.json
+++ b/composer.json
@@ -28,7 +28,7 @@
     "fond-of-spryker/product-list-extension": "dev-master"
   },
   "require-dev": {
-    "fond-of-codeception/spryker": "^1.0",
+    "fond-of-codeception/spryker": "*",
     "spryker/code-sniffer": "*",
     "spryker-sdk/phpstan-spryker": "*"
   },
